--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vuejs-rx",
-  "description": "A demo on vue-rx",
+  "description": "Demo Vue con rxjs",
   "version": "1.0.0",
-  "author": "Maximilian Schwarzmüller",
+  "author": "Julio Leiva",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
